--- a/index.html
+++ b/index.html
@@ -1,177 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-	<!-- METAS -->
+  <!-- METAS -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-br">
   <meta name="author" content="Francisco de Paula (euChico)">
-  <meta name="description" content="Desenvolvedor Web, focado no Front-end, compartilhando a trajetória de estudos e a construção de projetos pessoais.">
+  <meta name="description" content="Desenvolvedor Web compartilhando estudos e projetos pessoais.">
   <meta name="creator" content="Francisco de Paula (euChico)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="euCHICO - Francisco de Paula">
-  <meta property="og:description" content="Desenvolvedor Web, focado no Front-end, compartilhando a trajetória de estudos e a construção de projetos pessoais.">
+  <meta property="og:title" content="Francisco de Paula">
+  <meta property="og:description" content="Desenvolvedor Web compartilhando estudos e projetos pessoais.">
   <meta property="og:url" content="https://euchico.github.io/">
-  <meta property="og:site_name" content="euCHICO">
-  <meta property="og:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
+  <meta property="og:site_name" content="Francisco de Paula">
+  <meta property="og:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
   <meta name="twitter:card" value="summary">
   <meta name="twitter:site" content="@_euchico">
   <meta name="twitter:creator" content="@_euchico">
-  <meta name="twitter:title" content="euCHICO - Francisco de Paula">
-  <meta name="twitter:description" content="Desenvolvedor Web, focado no Front-end, compartilhando a trajetória de estudos e a construção de projetos pessoais.">
-  <meta name="twitter:image" content="https://euchico.github.io/images/euchico-perfil-3.jpg">
+  <meta name="twitter:title" content="Francisco de Paula">
+  <meta name="twitter:description" content="Desenvolvedor Web compartilhando estudos e projetos pessoais.">
+  <meta name="twitter:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg"> -->
   <!-- / SEO -->
   <!-- / METAS -->
 
-  <!-- SCRIPTS -->
-  <script src="https://kit.fontawesome.com/2afad5831f.js" crossorigin="anonymous" SameSite="none Secure"></script>
-  <!-- SCRIPTS -->
-
   <!-- FONTE -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <!-- / FONTE -->
 
-	<!-- ESTILOS -->
-  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-  <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <!-- ESTILOS -->
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/font/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
   <!-- / ESTILOS -->
-
-  <link rel="icon" href="favicon.ico">
-  <title>euCHICO - Francisco de Paula</title>
-<head>
+  
+  <link href="assets/img/favicon.ico" rel="icon"> <!-- Ícone -->
+  <title>Francisco de Paula</title> <!-- Título -->
+</head>
 
 <body>
-  <!-- NAVEGAÇÃO -->
-  <nav id="navagation" class="container navbar navbar-expand-sm">
-    <a href="/">
-      <h1>
-        <span class="logo-part1 color-nv3">eu</span><span class="logo-part2 color-nv1">CHICO</span>
-      </h1>
-    </a>
+  <!-- PRINCIPAL -->
+  <main id="main">
+    <div class="container">
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <h1>Francisco de Paula</h1> <!-- Título -->
+      <h2><span>Desenvolvedor Web</span> compartilhando estudos e projetos pessoais</h2> <!-- Subtítulo -->
 
-    <div id="collapsingNavbar" class="navbar-collapse collapse ">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item color-nv1"><a class="nav-link txt-up" href="sobre">sobre</a></li>
-        <li class="nav-item color-nv1"><a class="nav-link txt-bold txt-up" href="curriculo">currículo</a></li>
-      </ul>
+      <!-- Social -->
+      <div class="social-links">
+        <a href="mailto:eu.francisco@outlook.com"><i class="icofont-mail"></i></a>
+        <a href="#"><i class="icofont-globe"></i></a>
+        <a href="https://github.com/euchico/" target="_blank"><i class="icofont-github"></i></i></a>
+        <a href="https://www.linkedin.com/in/euchico/" target="_blank"><i class="icofont-linkedin"></i></a>
+        <a href="https://www.instagram.com/eu.chico/" target="_blank"><i class="icofont-instagram"></i></a>
+      </div>
+      <!-- / Social -->
     </div>
-  </nav>
-  <!-- / NAVEGAÇÃO -->
-
-  <!-- CABEÇALHO -->
-  <header class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6 text-center ">
-        <h2 class="color-nv1">Francisco de Paula</h2>
-        <h3 class="color-nv2">Desenvolvedor Web</h3>
-        <hr class="hr-type1 color-nv4 mx-auto ">
-        <p class="txt-featured color-nv2">
-          Desenvolvedor Web, focado no Front-end, compartilhando a trajetória de estudos e a construção de projetos pessoais.
-        </p>
-      </div>
-    </div>
-
-    <hr class="hr-type2 color-nv4">
-  </header>
-  <!-- / CABEÇALHO -->
-
-  <!-- SEÇÃO: PORTFÓLIO -->
-  <section class="container">
-    <div class="row">
-      <!-- TRABALHO 1 -->
-      <div class="col-md-12">
-        <a href="http://moemasantiago.com/" target="_blank">
-          <div class="col-md-12 job job-type2" style="background:transparent url('images/freelance.jpg') no-repeat center center /cover">
-            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Freelance/Front-end</div>
-          </div>
-        </a>
-      </div>
-    </div>
-    <!-- / TRABALHO 1 -->
-
-    <div class="row hidden-mobile">
-      <!-- TRABALHO 2 -->
-      <div class="col-md-4">
-        <a href="https://github.com/euchico/webdev-study" target="_blank">
-          <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-study.jpg') no-repeat center center /cover">
-            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
-          </div>
-        </a>
-      </div>
-      <!-- / TRABALHO 2 -->
-
-      <!-- TRABALHO 3 -->
-      <div class="col-md-4 m-adjust-mobile">
-        <a href="https://github.com/euchico/webdev-challenge" target="_blank">
-          <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-challenge.jpg') no-repeat center center /cover">
-            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
-          </div>
-        </a>
-      </div>
-      <!-- / TRABALHO 3 -->
-
-      <!-- TRABALHO 4 -->
-      <div class="col-md-4 m-adjust-mobile">
-        <a href="https://euchico.github.io/webdev-cookbook/" target="_blank">
-          <div class="col-md-12 job job-type3" style="background:transparent url('images/repositorio-webdev-cookbook.jpg') no-repeat center center /cover">
-            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-            <div class="job-btn job-btn-category">Estudo/Desenvolvimento</div>
-          </div>
-        </a>
-      </div>
-      <!-- / TRABALHO 4 -->
-    </div>  
-  </section>
-  <!-- / SEÇÃO: PORTFÓLIO -->
-
-  <!-- RODAPÉ -->
-  <footer class="container">
-    <hr class="hr-type2 color-nv4">
-
-    <span class="logo-part1 txt-size4 color-nv3">eu</span><span class="logo-part2 txt-size4 color-nv1">CHICO</span>
-    
-    <hr class="hr-type1 color-nv4">
-
-    <a href="mailto:eu.francisco@outlook.com">
-      <span class="email color-nv2">eu.francisco@outlook.com</span>
-    </a> 
-
-    <div class="social">          
-      <a href="https://github.com/euchico" target="_blank">
-        <img src="images/social-github.png" alt="GitHub: @euchico">
-      </a>
-
-      <a href="https://www.linkedin.com/in/euchico/" target="_blank">
-        <img src="images/social-linkedin.png" alt="LinkedIn: @euchico">
-      </a>
-
-      <a href="https://www.instagram.com/eu.chico/" target="_blank">
-        <img src="images/social-instagram-1.png" alt="Instagram: @eu.chico">
-      </a>
-    </div>
-  </footer>
-  <!-- / RODAPÉ -->
+  </main>
+  <!-- / PRINCIPAL -->
 
   <!-- SCRIPTS -->
-	<script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-  <script type="text/javascript" src="scripts/script.js"></script>
-	<!-- / SCRIPTS -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <!-- / SCRIPTS -->
 </body>
 </html>
