--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta name="twitter:creator" content="@_euchico">
   <meta name="twitter:title" content="Francisco de Paula">
   <meta name="twitter:description" content="Desenvolvedor Web compartilhando estudos e projetos pessoais.">
-  <meta name="twitter:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg"> -->
+  <meta name="twitter:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
 
