Finalização do site

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Social -->
       <div class="social-links">
         <a href="mailto:eu.francisco@outlook.com"><i class="icofont-mail"></i></a>
-        <a href="#"><i class="icofont-globe"></i></a>
+        <a href="http://euchico.com/" target="_blank"><i class="icofont-globe"></i></a>
         <a href="https://github.com/euchico/" target="_blank"><i class="icofont-github"></i></i></a>
         <a href="https://www.linkedin.com/in/euchico/" target="_blank"><i class="icofont-linkedin"></i></a>
         <a href="https://www.instagram.com/eu.chico/" target="_blank"><i class="icofont-instagram"></i></a>
