Alteracao completo do site

--- a/index.html
+++ b/index.html
@@ -1,75 +1,166 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-  <!-- METAS -->
+	<!-- METAS -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-br">
-  <meta name="author" content="Francisco de Paula (euChico)">
-  <meta name="description" content="Desenvolvedor Web compartilhando estudos e projetos pessoais.">
-  <meta name="creator" content="Francisco de Paula (euChico)">
+  <meta name="author" content="Francisco de Paula (euCHICO)">
+  <meta name="description" content="Estudante de Matemática e Desenvolvedor Web, compartilhando conhecimento através de Estudos e Projetos Pessoais.">
+  <meta name="creator" content="Francisco de Paula (euCHICO)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Francisco de Paula">
-  <meta property="og:description" content="Desenvolvedor Web compartilhando estudos e projetos pessoais.">
-  <meta property="og:url" content="https://euchico.github.io/">
-  <meta property="og:site_name" content="Francisco de Paula">
+  <meta property="og:title" content="euCHICO - Francisco de Paula">
+  <meta property="og:description" content="Estudante de Matemática e Desenvolvedor Web, compartilhando conhecimento através de Estudos e Projetos Pessoais.">
+  <meta property="og:url" content="https://euchico.github.io">
+  <meta property="og:site_name" content="euCHICO">
   <meta property="og:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
   <meta name="twitter:card" value="summary">
-  <meta name="twitter:site" content="@_euchico">
-  <meta name="twitter:creator" content="@_euchico">
-  <meta name="twitter:title" content="Francisco de Paula">
-  <meta name="twitter:description" content="Desenvolvedor Web compartilhando estudos e projetos pessoais.">
+  <meta name="twitter:site" content="@euchicoart">
+  <meta name="twitter:creator" content="@euchicoart">
+  <meta name="twitter:title" content="euCHICO - Francisco de Paula">
+  <meta name="twitter:description" content="Estudante de Matemática e Desenvolvedor Web, compartilhando conhecimento através de Estudos e Projetos Pessoais.">
   <meta name="twitter:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
 
+  <!-- SCRIPTS -->
+  <script src="https://kit.fontawesome.com/2afad5831f.js" crossorigin="anonymous" SameSite="none Secure"></script>
+  <!-- SCRIPTS -->
+
   <!-- FONTE -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <!-- / FONTE -->
 
-  <!-- ESTILOS -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/font/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/css/main.css" rel="stylesheet">
+	<!-- ESTILOS -->
+  <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   <!-- / ESTILOS -->
-  
-  <link href="assets/img/favicon.ico" rel="icon"> <!-- Ícone -->
-  <title>Francisco de Paula</title> <!-- Título -->
-</head>
 
-<body>
-  <!-- PRINCIPAL -->
-  <main id="main">
-    <div class="container">
+  <link rel="icon" href="assets/img/favicon.ico">
+  <title>euCHICO - Francisco de Paula</title>
+<head>
 
-      <h1>Francisco de Paula</h1> <!-- Título -->
-      <h2><span>Desenvolvedor Web</span> compartilhando estudos e projetos pessoais</h2> <!-- Subtítulo -->
+<body id="home">
+  <!-- NAVEGAÇÃO -->
+  <nav id="navagation" class="container navbar navbar-expand-sm">
+    <a href="/">
+      <h1>
+        <span class="logo-part1">eu</span><span class="logo-part2">CHICO</span>
+      </h1>
+    </a>
 
-      <!-- Social -->
-      <div class="social-links">
-        <a href="mailto:eu.francisco@outlook.com"><i class="icofont-mail"></i></a>
-        <a href="http://euchico.com/" target="_blank"><i class="icofont-globe"></i></a>
-        <a href="https://github.com/euchico/" target="_blank"><i class="icofont-github"></i></i></a>
-        <a href="https://www.linkedin.com/in/euchico/" target="_blank"><i class="icofont-linkedin"></i></a>
-        <a href="https://www.instagram.com/eu.chico/" target="_blank"><i class="icofont-instagram"></i></a>
-      </div>
-      <!-- / Social -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div id="collapsingNavbar" class="navbar-collapse collapse ">
+      <ul class="navbar-nav ml-auto ">
+        <li class="nav-item"><a class="nav-link" href="sobre">sobre</a></li>
+        <li class="nav-item"><a class="nav-link" href="curriculo">currículo</a></li>
+      </ul>
     </div>
-  </main>
-  <!-- / PRINCIPAL -->
+  </nav>
+  <!-- / NAVEGAÇÃO -->
+
+  <!-- CABEÇALHO -->
+  <header class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6 text-center ">
+        <h2>Francisco de Paula</h2>
+        <h3>Desenvolvedor Web</h3> 
+        <hr class="hr-type1 mx-auto">
+        <p class="txt-featured ">
+          Compartilhando conhecimento através de Estudos e Projetos Pessoais. 
+        </p>
+      </div>
+    </div>
+
+    <hr class="hr-type2">
+  </header>
+  <!-- / CABEÇALHO -->
+
+  <!-- SEÇÃO: PORTFÓLIO -->
+  <section class="container">
+    <!-- TRABALHO 1 -->
+    <div class="row">
+      <div class="col-md-12">
+        <a href="https://euchico.github.io/webdev-study/" target="_blank">
+          <div class="col-md-12 job" style="background:#F8F9FA url('assets/img/webdev-study.jpg') no-repeat center center /cover">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Pessoal/Estudos</div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <!-- / TRABALHO 1 --> 
+
+    <!-- TRABALHO 2 -->
+    <div class="row">
+      <div class="col-md-12">
+        <a href="https://github.com/euchico/webdev-challenge" target="_blank">
+          <div class="col-md-12 job" style="background:#F8F9FA url('assets/img/webdev-challenge.jpg') no-repeat center center /cover">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Pessoal/Desafios</div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <!-- / TRABALHO 2 -->
+
+    <!-- TRABALHO 3 -->
+    <div class="row">
+      <div class="col-md-12">
+        <a href="https://euchico.github.io/webdev-cookbook/" target="_blank">
+          <div class="col-md-12 job" style="background: #F8F9FA url('assets/img/webdev-cookbook.jpg') no-repeat center center /cover">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Pessoal/Anotações</div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <!-- / TRABALHO 3 -->
+  </section>
+  <!-- / SEÇÃO: PORTFÓLIO -->
+
+  <!-- RODAPÉ -->
+  <footer class="container">
+    <hr class="hr-type2">
+
+    <span class="logo-part1">eu</span><span class="logo-part2">CHICO</span>
+    
+    <hr class="hr-type1">
+
+    <a href="mailto:eu.francisco@outlook.com">
+      <span class="email">eu.francisco@outlook.com</span>
+    </a> 
+
+    <div class="social">          
+      <a href="https://github.com/euchico" target="_blank">
+        <img src="assets/img/social-github.png" alt="GitHub: @euchico">
+      </a>
+
+      <a href="https://www.linkedin.com/in/euchico" target="_blank">
+        <img src="assets/img/social-linkedin.png" alt="LinkedIn: @euchico">
+      </a>
+      
+      <a href="https://instragram.com/eu.chico" target="_blank">
+        <img src="assets/img/social-instagram-2.png" alt="Instram: @eu.chico">
+      </a>
+    </div>
+  </footer>
+  <!-- / RODAPÉ -->
 
   <!-- SCRIPTS -->
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <!-- / SCRIPTS -->
+  <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
+	<!-- / SCRIPTS -->
 </body>
 </html>
