Arquivo de licensa e links

--- a/curriculo.html
+++ b/curriculo.html
@@ -18,16 +18,16 @@
   <meta property="og:description" content="Curso Licenciatura em Matemática e sempre tive interesse em matemática, lógica, programação e encontrei a paixão pelo modo de pensar dentro dessas áreas.">
   <meta property="og:url" content="https://euchico.github.io/">
   <meta property="og:site_name" content="euCHICO">
-  <meta property="og:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
+  <meta property="og:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
   <meta name="twitter:card" value="summary">
-  <meta name="twitter:site" content="@_euchico">
-  <meta name="twitter:creator" content="@_euchico">
+  <meta name="twitter:site" content="@eueuchico">
+  <meta name="twitter:creator" content="@eueuchico">
   <meta name="twitter:title" content="euCHICO - Currículo">
   <meta name="twitter:description" content="Curso Licenciatura em Matemática e sempre tive interesse em matemática, lógica, programação e encontrei a paixão pelo modo de pensar dentro dessas áreas.">
-  <meta name="twitter:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
+  <meta name="twitter:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <!-- / SEO -->  
   <!-- / METAS -->
 
@@ -380,7 +380,7 @@
 
               <p>
                 O desenho sempre fez parte da minha vida, em certos momentos de forma séria e outros por diversão. 
-                Com isso, posso falar que arte é algo fundamental para mim e gosto de compartilhar alguns estudos de desenhos no <strong><a href="https://www.instagram.com/euchico.jpg" target="_blank">Instagram</a></strong>.
+                Com isso, posso falar que arte é algo fundamental para mim e gosto de compartilhar alguns estudos de desenhos no <strong><a href="https://www.instagram.com/euchicoart" target="_blank">Instagram</a></strong>.
               </p>
             </div>
           </div>
