--- a/sobre.html
+++ b/sobre.html
@@ -18,16 +18,16 @@
   <meta property="og:description" content="Francisco de Paula, minha trajetória não é linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…”.">
   <meta property="og:url" content="http://euchico.com/sobre">
   <meta property="og:site_name" content="euCHICO">
-  <meta property="og:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
+  <meta property="og:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
   <meta name="twitter:card" value="summary">
-  <meta name="twitter:site" content="@_euchico">
-  <meta name="twitter:creator" content="@_euchico">
+  <meta name="twitter:site" content="@eueuchico">
+  <meta name="twitter:creator" content="@eueuchico">
   <meta name="twitter:title" content="euCHICO - Sobre">
   <meta name="twitter:description" content="Francisco de Paula, minha trajetória não é linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…”.">
-  <meta name="twitter:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
+  <meta name="twitter:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <!-- / SEO -->
   <!-- / METAs -->
 
@@ -136,8 +136,8 @@
     <hr class="hr-type1">
 
     <div class="social">          
-      <a href="https://www.instagram.com/euchico.jpg/" target="_blank">
-        <img src="assets/img/social-instagram-1.png" alt="Instagram: @euchico.jpg">
+      <a href="https://www.instagram.com/euchicoart/" target="_blank">
+        <img src="assets/img/social-instagram-1.png" alt="Instagram: @euchicoart">
       </a>
     </div>
 
