--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
   <meta property="og:description" content="Estudante de Matemática e Desenvolvedor Web, compartilhando conhecimento através de Estudos e Projetos Pessoais.">
   <meta property="og:url" content="https://euchico.github.io">
   <meta property="og:site_name" content="euCHICO">
-  <meta property="og:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
+  <meta property="og:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
   <meta name="twitter:card" value="summary">
-  <meta name="twitter:site" content="@euchicoart">
-  <meta name="twitter:creator" content="@euchicoart">
+  <meta name="twitter:site" content="@eueuchico">
+  <meta name="twitter:creator" content="@eueuchico">
   <meta name="twitter:title" content="euCHICO - Francisco de Paula">
   <meta name="twitter:description" content="Estudante de Matemática e Desenvolvedor Web, compartilhando conhecimento através de Estudos e Projetos Pessoais.">
-  <meta name="twitter:image" content="https://euchico.github.io/assets/img/avatar-euchico.jpg">
+  <meta name="twitter:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
 
