Ajustes de link

--- a/sobre.html
+++ b/sobre.html
@@ -97,7 +97,7 @@
     <!-- TRABALHO 4 -->
     <div class="row">
       <div class="col-md-12">
-        <a href="https://matematicadasorte.com/" target="_blank">
+        <a href="https://github.com/euchico/matematica-sorte" target="_blank">
           <div class="col-md-12 job" style="background: #F8F9FA url('assets/img/projeto-mds.jpg') no-repeat top center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Projeto Pessoal</div>
