Atualizaçao do Readme

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-br">
   <meta name="author" content="Francisco de Paula (euCHICO)">
-  <meta name="description" content="Estudante de Matemática e Desenvolvedor Web, compartilhando conhecimento através de Estudos e Projetos Pessoais.">
+  <meta name="description" content="Buscando oportunidades e compartilhando conhecimento através de estudos e projetos pessoais.">
   <meta name="creator" content="Francisco de Paula (euCHICO)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="euCHICO - Francisco de Paula">
-  <meta property="og:description" content="Estudante de Matemática e Desenvolvedor Web, compartilhando conhecimento através de Estudos e Projetos Pessoais.">
+  <meta property="og:description" content="Buscando oportunidades e compartilhando conhecimento através de estudos e projetos pessoais.">
   <meta property="og:url" content="https://euchico.github.io">
   <meta property="og:site_name" content="euCHICO">
   <meta property="og:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
@@ -26,8 +26,8 @@
   <meta name="twitter:site" content="@eueuchico">
   <meta name="twitter:creator" content="@eueuchico">
   <meta name="twitter:title" content="euCHICO - Francisco de Paula">
-  <meta name="twitter:description" content="Estudante de Matemática e Desenvolvedor Web, compartilhando conhecimento através de Estudos e Projetos Pessoais.">
-  <meta name="twitter:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
+  <meta name="twitter:description" content="Buscando oportunidades e compartilhando conhecimento através de estudos e projetos pessoais.">
+  <meta name="twitter:image" content="  ">
   <!-- / SEO -->
   <!-- / METAS -->
 
@@ -79,7 +79,7 @@
         <h3>Desenvolvedor Web</h3> 
         <hr class="hr-type1 mx-auto">
         <p class="txt-featured ">
-          Compartilhando conhecimento através de Estudos e Projetos Pessoais. 
+          Buscando oportunidades e compartilhando conhecimento através de estudos e projetos pessoais.
         </p>
       </div>
     </div>
