Inicio da atualização para Bootstrap 5

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta name="twitter:creator" content="@eueuchico">
   <meta name="twitter:title" content="euCHICO - Francisco de Paula">
   <meta name="twitter:description" content="Buscando oportunidades e compartilhando conhecimento através de estudos e projetos pessoais.">
-  <meta name="twitter:image" content="  ">
+  <meta name="twitter:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
 
@@ -51,19 +51,24 @@
 
 <body id="home">
   <!-- NAVEGAÇÃO -->
-  <nav id="navagation" class="container navbar navbar-expand-sm">
+  <!-- <nav id="navagation" class="container navbar navbar-expand-sm"> -->
+  <nav id="navagation" class="container d-flex flex-wrap justify-content-start align-items-center py-2">
     <a href="/">
       <h1>
         <span class="logo-part1">eu</span><span class="logo-part2">CHICO</span>
       </h1>
     </a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+    <!-- <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingNavbar" aria-controls="collapsingNavbar" aria-expanded="false" aria-label="Toggle Navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
 
-    <div id="collapsingNavbar" class="navbar-collapse collapse ">
-      <ul class="navbar-nav ml-auto ">
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+
+    <div class="ms-auto">
+      <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="sobre">sobre</a></li>
         <li class="nav-item"><a class="nav-link" href="curriculo">currículo</a></li>
       </ul>
@@ -88,11 +93,11 @@
   </header>
   <!-- / CABEÇALHO -->
 
-  <!-- SEÇÃO: PORTFÓLIO -->
+  <!-- SEÇÃO: PESSOAL -->
   <section class="container">
-    <!-- TRABALHO 1 -->
+    <!-- ESTUDO 1 -->
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-lg-4">
         <a href="https://euchico.github.io/webdev-study/" target="_blank">
           <div class="col-md-12 job" style="background:#F8F9FA url('assets/img/webdev-study.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -100,12 +105,10 @@
           </div>
         </a>
       </div>
-    </div>
-    <!-- / TRABALHO 1 --> 
+      <!-- / ESTUDO 1 -->
 
-    <!-- TRABALHO 2 -->
-    <div class="row">
-      <div class="col-md-12">
+      <!-- ESTUDO 2 -->
+      <div class="col-lg-4">
         <a href="https://github.com/euchico/webdev-challenge" target="_blank">
           <div class="col-md-12 job" style="background:#F8F9FA url('assets/img/webdev-challenge.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -113,12 +116,10 @@
           </div>
         </a>
       </div>
-    </div>
-    <!-- / TRABALHO 2 -->
+      <!-- / ESTUDO 2 -->
 
-    <!-- TRABALHO 3 -->
-    <div class="row">
-      <div class="col-md-12">
+      <!-- ESTUDO 3 -->
+      <div class="col-lg-4">
         <a href="https://euchico.github.io/webdev-cookbook/" target="_blank">
           <div class="col-md-12 job" style="background: #F8F9FA url('assets/img/webdev-cookbook.jpg') no-repeat center center /cover">
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
@@ -127,9 +128,9 @@
         </a>
       </div>
     </div>
-    <!-- / TRABALHO 3 -->
+    <!-- / ESTUDO 3 -->
   </section>
-  <!-- / SEÇÃO: PORTFÓLIO -->
+  <!-- / SEÇÃO: PESSOAL -->
 
   <!-- RODAPÉ -->
   <footer class="container">
